--- a/src/main/resources/com/example/emirates/Main.fxml
+++ b/src/main/resources/com/example/emirates/Main.fxml
@@ -35,7 +35,7 @@
             <RowConstraints maxHeight="308.0000061035156" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
           </rowConstraints>
           <children>
-            <ComboBox fx:id="depBox" editable="true" prefHeight="60.0" prefWidth="320.0" promptText="Departure Airport" />
+            <ComboBox fx:id="depBox" editable="true" onAction="#onDepartureSelected" onKeyReleased="#handleDepKeyRelease" onMouseClicked="#handleDepMouseClick" prefHeight="60.0" prefWidth="320.0" promptText="Departure Airport" />
             <ComboBox fx:id="arrBox" editable="true" onAction="#onDestinationSelected" onKeyReleased="#handleKeyRelease" onMouseClicked="#handleMouseClick" prefHeight="60.0" prefWidth="320.0" promptText="Arrival Airport" GridPane.columnIndex="1" />
             <ComboBox fx:id="classMenu" editable="true" prefHeight="60.0" prefWidth="320.0" promptText="Class" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <MenuButton fx:id="passMenu" alignment="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="320.0" text="Passengers" GridPane.rowIndex="1">
@@ -43,16 +43,16 @@
                 <MenuItem mnemonicParsing="false">
                   <graphic>
                     <HBox alignment="CENTER" spacing="10.0">
-                      <Label style="-fx-font-size: 18px;" text="Adults" />
-                      <Spinner prefWidth="100.0" style="-fx-font-size: 18px;" />
+                      <Label style="-fx-font-size: 18px;" text="Adult(s)" />
+                      <Spinner fx:id="adultSpinner" prefWidth="100.0" style="-fx-font-size: 18px;" />
                     </HBox>
                   </graphic>
                 </MenuItem>
                 <MenuItem mnemonicParsing="false">
                   <graphic>
                     <HBox alignment="CENTER" spacing="10.0">
-                      <Label style="-fx-font-size: 18px;" text="Children" />
-                      <Spinner prefWidth="100.0" style="-fx-font-size: 18px;" />
+                      <Label style="-fx-font-size: 18px;" text="Child(ren)" />
+                      <Spinner fx:id="childrenSpinner"  prefWidth="100.0" style="-fx-font-size: 18px;" />
                     </HBox>
                   </graphic></MenuItem>
               </items>
