--- a/src/main/resources/com/example/emirates/style.css
+++ b/src/main/resources/com/example/emirates/style.css
@@ -406,7 +406,10 @@ body {
 
 /* Go Button */
 #goBtn {
-    -fx-background-color: #D71920; /* Soft blue */
+    -fx-background-image: url("/plane-alt_(1).png");
+    -fx-background-repeat: no-repeat ;
+    -fx-background-size: cover;
+    -fx-background-color: #D71920   ;
     -fx-text-fill: white;
     -fx-font-size: 18px;
     -fx-border-radius: 8;
