--- a/src/main/resources/com/example/emirates/flights.fxml
+++ b/src/main/resources/com/example/emirates/flights.fxml
@@ -46,8 +46,8 @@
          <children>
             <Pane fx:id="toolBarFlights" prefHeight="60.0" prefWidth="1973.0">
                <children>
-                  <Button fx:id="loginBtnFlights" layoutX="1376.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="60.0" text="LOG IN" />
-                  <Button fx:id="iconBtnFlights" layoutX="179.0" layoutY="-2.0" maxWidth="114.0" minWidth="114.0" mnemonicParsing="false" prefHeight="141.0" prefWidth="114.0" />
+                  <Button fx:id="loginBtnFlights" onAction="#handleLoginFlightButton" layoutX="1376.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="60.0" text="LOG IN" />
+                  <Button fx:id="iconBtnFlights" onAction="#goToMain" layoutX="179.0" layoutY="-2.0" maxWidth="114.0" minWidth="114.0" mnemonicParsing="false" prefHeight="141.0" prefWidth="114.0" />
                </children>
             </Pane>
          </children>
