--- a/src/main/resources/com/example/emirates/style.css
+++ b/src/main/resources/com/example/emirates/style.css
@@ -409,7 +409,7 @@ body {
     -fx-background-image: url("/plane-alt_(1).png");
     -fx-background-repeat: no-repeat ;
     -fx-background-size: cover;
-    -fx-background-color: #D71920   ;
+    -fx-background-color: #D71920;
     -fx-text-fill: white;
     -fx-font-size: 18px;
     -fx-border-radius: 8;
@@ -431,6 +431,26 @@ body {
     -fx-background-color: green; /* Even darker blue when clicked */
     -fx-scale-x: 0.95; /* Slightly shrink for click feedback */
     -fx-scale-y: 0.95;
+}
+
+#aboutBtn{
+    -fx-background-color: #333;
+    -fx-text-fill: white; /* White text for menu labels */
+    -fx-font-weight: bold;
+    -fx-padding: 10 20;
+    -fx-font-size: 21px;
+}
+#aboutBtn:hover {
+    -fx-background-color: #444; /* Slightly darker gray on hover */
+    -fx-transition: -fx-background-color 0.3s ease, -fx-effect 0.3s ease;
+    -fx-cursor: hand; /* Change cursor to hand */
+    -fx-scale-x: 1.05;
+    -fx-scale-y: 1.05;
+}
+#aboutBtn:pressed {
+    -fx-scale-x: 1;
+    -fx-scale-y: 1;
+    -fx-background-color: #222;
 }
 
 .panel-shadow {
