--- a/src/main/resources/com/example/emirates/Main.fxml
+++ b/src/main/resources/com/example/emirates/Main.fxml
@@ -118,7 +118,7 @@
             </MenuBar>
             <Button fx:id="iconBtn" layoutX="179.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="141.0" prefWidth="114.0" />
             <Button fx:id="loginBtnMain" layoutX="1431.0" layoutY="-2.0" mnemonicParsing="false" onAction="#handleLoginButton" text="LOG IN" />
-            <Button fx:id="searchBtn" layoutX="1440.0" layoutY="70.0" mnemonicParsing="false" text="Search Flights" />
+            <Button fx:id="searchBtn" layoutX="1440.0" layoutY="70.0" mnemonicParsing="false" text="🔍Search Flights" />
             <Button layoutX="521.0" fx:id="aboutBtn" onAction="#gotoAbout" layoutY="-2.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="120.0" text="About" />
          </children>
       </Pane>
