--- a/src/main/resources/com/example/emirates/Main.fxml
+++ b/src/main/resources/com/example/emirates/Main.fxml
@@ -35,8 +35,8 @@
             <RowConstraints maxHeight="308.0000061035156" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
           </rowConstraints>
           <children>
-            <ComboBox fx:id="depBox" editable="true" onAction="#onDepartureSelected" onKeyReleased="#handleDepKeyRelease" onMouseClicked="#handleDepMouseClick" prefHeight="60.0" prefWidth="320.0" promptText="Departure Airport" />
-            <ComboBox fx:id="arrBox" editable="true" onAction="#onDestinationSelected" onKeyReleased="#handleKeyRelease" onMouseClicked="#handleMouseClick" prefHeight="60.0" prefWidth="320.0" promptText="Arrival Airport" GridPane.columnIndex="1" />
+            <ComboBox fx:id="depBox" editable="true" onAction="#onDepartureSelected" onKeyReleased="#handleDepKeyRelease" onMouseClicked="#handleDepMouseClick" prefHeight="60.0" prefWidth="320.0" promptText="Departure Airport" visibleRowCount="5" />
+            <ComboBox fx:id="arrBox" editable="true" onAction="#onDestinationSelected" onKeyReleased="#handleArrKeyRelease" onMouseClicked="#handleArrMouseClick" prefHeight="60.0" prefWidth="320.0" promptText="Arrival Airport" visibleRowCount="5" GridPane.columnIndex="1" />
             <ComboBox fx:id="classMenu" editable="true" prefHeight="60.0" prefWidth="320.0" promptText="Class" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <MenuButton fx:id="passMenu" alignment="CENTER" mnemonicParsing="false" prefHeight="60.0" prefWidth="320.0" text="Passengers" GridPane.rowIndex="1">
               <items>
@@ -119,7 +119,7 @@
             <Button fx:id="iconBtn" layoutX="179.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="141.0" prefWidth="114.0" />
             <Button fx:id="loginBtnMain" layoutX="1431.0" layoutY="-2.0" mnemonicParsing="false" onAction="#handleLoginButton" text="LOG IN" />
             <Button fx:id="searchBtn" layoutX="1440.0" layoutY="70.0" mnemonicParsing="false" text="🔍Search Flights" />
-            <Button layoutX="521.0" fx:id="aboutBtn" onAction="#gotoAbout" layoutY="-2.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="120.0" text="About" />
+            <Button fx:id="aboutBtn" layoutX="521.0" layoutY="-2.0" mnemonicParsing="false" onAction="#gotoAbout" prefHeight="60.0" prefWidth="120.0" text="About" />
          </children>
       </Pane>
   </children>
