--- a/src/main/resources/com/example/emirates/Main.fxml
+++ b/src/main/resources/com/example/emirates/Main.fxml
@@ -105,8 +105,9 @@
                         <Menu fx:id="manageDrop" mnemonicParsing="false" text="Manage your booking">
                           <items>
                             <MenuItem fx:id="viewMenu" mnemonicParsing="false" text="View your booking" />
-                            <MenuItem fx:id="changeMenu" mnemonicParsing="false" text="Change booking" />
-                            <MenuItem fx:id="cancelMenu" mnemonicParsing="false" text="Cancel booking" />
+                            <MenuItem fx:id="changeMenu" mnemonicParsing="false" text="Change Seat(s)" />
+                            <MenuItem fx:id="cancelMenu" mnemonicParsing="false" text="Cancel booking"  />
+
                           </items>
                         </Menu>
                      </items>
@@ -118,7 +119,7 @@
             </MenuBar>
             <Button fx:id="iconBtn" layoutX="179.0" layoutY="-2.0" mnemonicParsing="false" prefHeight="141.0" prefWidth="114.0" />
             <Button fx:id="loginBtnMain" layoutX="1431.0" layoutY="-2.0" mnemonicParsing="false" onAction="#handleLoginButton" text="LOG IN" />
-            <Button fx:id="searchBtn" layoutX="1440.0" layoutY="70.0" mnemonicParsing="false" text="🔍Search Flights" />
+            <Button fx:id="searchBtn" onAction="#gotosearch" layoutX="1440.0" layoutY="70.0" mnemonicParsing="false" text="🔍Search Flights" />
             <Button fx:id="aboutBtn" layoutX="521.0" layoutY="-2.0" mnemonicParsing="false" onAction="#gotoAbout" prefHeight="60.0" prefWidth="120.0" text="About" />
          </children>
       </Pane>
