--- a/src/main/resources/com/example/emirates/ChangeSeats.fxml
+++ b/src/main/resources/com/example/emirates/ChangeSeats.fxml
@@ -1,18 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
 
-<VBox spacing="10.0" alignment="CENTER" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.emirates.ChangeSeatsController">
-    <children>
-        <Label text="Change Seat(s)" style="-fx-font-size: 24px; -fx-font-weight: bold;" />
-        <Label text="Select New Seat:" />
-        <ComboBox fx:id="seatComboBox" promptText="Choose Seat" />
-        <Button text="Confirm Change"  />
-    </children>
-    <padding>
-        <Insets top="20" left="20" right="20" bottom="20" />
-    </padding>
-</VBox>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+
+<BorderPane fx:id="changeSeatBorder" prefHeight="1080.0" prefWidth="1920.0" stylesheets="@changeseat.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.emirates.ChangeSeatsController">
+    <center>
+        <StackPane fx:id="seatClassPane" prefWidth="1880.0" styleClass="center-pane">
+            <!-- ScrollPanes for seat selection -->
+            <ScrollPane fx:id="economyScroll" fitToWidth="true" style="-fx-background: transparent; -fx-background-color: transparent;" styleClass="scroll-pane" visible="false">
+                <GridPane fx:id="economyGrid" hgap="10" style="-fx-background: transparent;" styleClass="grid-pane" vgap="10" />
+            </ScrollPane>
+            <ScrollPane fx:id="businessScroll" fitToWidth="true" style="-fx-background: transparent; -fx-background-color: transparent;" styleClass="scroll-pane" visible="false">
+                <GridPane fx:id="businessGrid" hgap="15" styleClass="grid-pane" vgap="15" />
+            </ScrollPane>
+            <ScrollPane fx:id="firstScroll" fitToWidth="true" style="-fx-background: transparent; -fx-background-color: transparent;" styleClass="scroll-pane" visible="false">
+                <GridPane fx:id="firstGrid" hgap="20" styleClass="grid-pane" vgap="20" />
+            </ScrollPane>
+        </StackPane>
+    </center>
+   <top>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+               <!-- Title Label -->
+               <Label fx:id="titleLabel" styleClass="title-text" text="Change Your Seat" />
+         </children>
+      </HBox>
+   </top>
+   <bottom>
+      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" spacing="10.0" BorderPane.alignment="CENTER">
+         <children>
+                <Button fx:id="cancelButton" onAction="#handleCancelChange" styleClass="back-button" text="Back" />
+                <Button fx:id="confirmChangeButton" onAction="#handleConfirmChangeSeat" styleClass="confirm-button" text="Confirm Change" />
+         </children>
+      </HBox>
+   </bottom>
+</BorderPane>
